--- a/public/src/app/details/details.component.html
+++ b/public/src/app/details/details.component.html
@@ -1,4 +1,28 @@
-<div style="text-align:center">
+
+
+
+<h2>Name: {{product.name}}</h2>
+<h2>Qty: {{product.quantity}}</h2>
+<h2>Price: {{product.price}}</h2>
+
+<button class="btn btn-info" (click)="home()">Back</button>
+<button class="btn btn-info" (click)="delete()">Delete</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div style="text-align:center">
 <h2>Details about {{pet.name}}</h2>
 <h3>Pet Type: {{pet.type}}</h3>
 <h3>Description: {{pet.description}}</h3>
@@ -18,4 +42,4 @@
 <br>
 <br>
 <button class="btn btn-info" (click)="home()">Home</button>
-</div>
+</div> -->
