--- a/public/src/app/new/new.component.html
+++ b/public/src/app/new/new.component.html
@@ -1,40 +1,33 @@
- <!-- <h2>{{newTitle}}</h2>  -->
-
- <div style="text-align:center">
-    <h1>{{newTitle}}</h1>
-  </div>
-
+<div style="text-align:left">
+<h1>{{newTitle}}</h1>
+</div>
+<button class="btn btn-info" (click)="home()">Home</button>
 <div class="container">
-    <form (submit)="submitPet()" #form_data="ngForm">
-      <p>{{newPet | json }}</p>
+    <form (submit)="submitProduct()" #form_data="ngForm">
+      <!-- <p>{{newProduct | json }}</p> -->
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" name="newPet.name" [(ngModel)]="newPet.name" required>
+        <input type="text" class="form-control" id="name" name="newProduct.name" [(ngModel)]="newProduct.name" required>
         <div style="color:red">{{errors.name}}</div>
       </div>
       <div class="form-group">
-          <label for="type">Type</label>
-          <input type="text" class="form-control" id="type" name="newPet.type" [(ngModel)]="newPet.type" required>
-          <div style="color:red">{{errors.type}}</div>
+          <label for="type">Qty</label>
+          <input type="text" class="form-control" id="quantity" name="newProduct.quantity" [(ngModel)]="newProduct.quantity" required>
+          <div style="color:red">{{errors.quantity}}</div>
         </div>
         <div class="form-group">
-            <label for="description">Description</label>
-            <input type="text" class="form-control" id="description "name="description" [(ngModel)]="newPet.description" required>
-            <div style="color:red">{{errors.description}}</div>
+            <label for="description">Price</label>
+            <input type="text" class="form-control" id="price "name="newProduct.price" [(ngModel)]="newProduct.price" required>
+            <div style="color:red">{{errors.price}}</div>
         </div>
-        <div class="form-group">
-            <label for="skills">Skills:</label>
-            <br>
-            <strong>Skill 1:</strong>
-            <input type="text" class="form-control" id="skills" name="skills" [(ngModel)]="newPet.skill1">
-            <strong>Skill 2:</strong>
-            <input type="text" class="form-control" id="skills" name="skills" [(ngModel)]="newPet.skill2">
-            <strong>Skill 3:</strong>
-            <input type="text" class="form-control" id="skills" name="skills" [(ngModel)]="newPet.skill3">
-        </div>
-
-      <button type="submit" class="btn btn-success">Submit</button>    
-      <button class="btn btn-info" (click)="home()">Cancel</button>
-    </form>
-  </div>
-<hr>
+        <button type="submit" [disabled]="form_data.form.invalid" class="btn btn-success">Create</button>    
+      </form>
+    </div>
+    
+    <button class="btn btn-info" (click)="reset()">Reset</button>
+ 
+ 
+ 
+ 
+ 
+ 
