--- a/public/src/app/edit/edit.component.html
+++ b/public/src/app/edit/edit.component.html
@@ -1,39 +1,55 @@
-<button class="btn btn-info" (click)="home()">Home</button>
-<div  style="text-align:center">
-<h2>{{titleEdit}}</h2>
-</div>
 
-<div class="container">
-  <form (submit)="updatePet(pet)">
-    <p>{{pet | json }}</p>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" name="name" [(ngModel)]="pet.name" required>
-      <div style="color:red">{{errors.name}}</div>
-    </div>
-    <div class="form-group">
-        <label for="type">Type</label>
-        <input type="text" class="form-control" id="type" name="type" [(ngModel)]="pet.type" required>
-        <div style="color:red">{{errors.type}}</div>
-      </div>
-      <div class="form-group">
-          <label for="description">Description</label>
-          <input type="text" class="form-control" id="description "name="description" [(ngModel)]="pet.description" required>
-          <div style="color:red">{{errors.description}}</div>
-      </div>
-      <div class="form-group">
-          <label for="skills">Skills:</label>
-          <br>
-          <strong>Skill 1:</strong>
-          <input type="text" class="form-control" id="skill1" name="skill1" [(ngModel)]="pet.skill1">
-          <strong>Skill 2:</strong>
-          <input type="text" class="form-control" id="skill2" name="skill2" [(ngModel)]="pet.skill2"> 
-          <strong>Skill 3:</strong>
-          <input type="text" class="form-control" id="skill3" name="skill3" [(ngModel)]="pet.skill3">
-      </div>
-    <button type="submit" class="btn btn-success">Update</button>    
-    <button class="btn" (click)="delete()">Adopt</button>
-  </form>
+<style type="text/css">
+  .css-form input.ng-invalid.ng-touched {
+    background-color: #FA787E;
+  }
+
+  .css-form input.ng-valid.ng-touched {
+    background-color: #78FA89;
+  }
+</style>
+
+
+<div  style="text-align:left">
+  <h2>{{titleEdit}}</h2>
 </div>
-<hr>
+<button class="btn btn-info" (click)="home()">Home</button>
+<div class="container">
+    <form (submit)="updateProduct()" #form_data="ngForm">
+      <!-- <p>{{product | json }}</p> -->
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" name="product.name" [(ngModel)]="product.name" required>
+        <div style="color:red">{{errors.name}}</div>
+      </div>
+      <div class="form-group">
+          <label for="type">Qty</label>
+          <input type="text" class="form-control" id="quantity" name="product.quantity" [(ngModel)]="product.quantity" required>
+          <div style="color:red">{{errors.quantity}}</div>
+        </div>
+        <div class="form-group">
+            <label for="description">Price</label>
+            <input type="text" class="form-control" id="price "name="product.price" [(ngModel)]="product.price" required>
+            <div style="color:red">{{errors.price}}</div>
+        </div>
+        <button type="submit" [disabled]="form_data.form.invalid" class="btn btn-success">Create</button> 
+      </form>
+    </div>
+    <button class="btn btn-info" (click)="reset()">Reset</button>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
